# OOP

./: CMakeLists.txt  main.cpp
include/: EngineeringStudent.h  GraduatingStudent.h  Student.h
src/: EngineeringStudent.cpp  GraduatingStudent.cpp  Student.cpp
student_lb/src/: EngineeringStudent.cpp  GraduatingStudent.cpp
test_lb/: CMakeLists.txt  main.cpp
